--- a/index.html
+++ b/index.html
@@ -121,8 +121,10 @@
             <div class="tm-black-bg tm-mb-20 tm-about-box-1">              
               <h2 class="tm-text-primary tm-about-header">Basic Information</h2>
               <div class="tm-list-item tm-list-item-2">                
-                <img src="img/about-1.jpg" alt="Image" class="tm-list-item-img tm-list-item-img-big">
+                <img src="img/about-1.jpg" alt="Image" class="tm-list-item-img1 tm-list-item-img-big1">
                 <div class="tm-list-item-text-2">
+                  <br>
+                  <br>
                   <p>Full Name: Nguyen Ngoc Ha</p>
                   <p>ID Student: 21110766</p>
                 </div>                
