--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <div class="tm-list">
                 <div class="tm-list-item">          
                   <div class="tm-black-bg tm-list-item-text">
-                    <h3 class="tm-list-item-name">Homework week 3<span class="tm-list-item-price"><a href="#">Go Live</a></span></h3>
+                    <h3 class="tm-list-item-name">Homework week 4<span class="tm-list-item-price"><a href="https://w4-q0iv.onrender.com/W4_21110766-1.0-SNAPSHOT/">Go Live</a></span></h3>
                     <p class="tm-list-item-description">Java Servlet</p>
                   </div>
                 </div>
