--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="tm-list-item">          
                   <div class="tm-black-bg tm-list-item-text">
-                    <h3 class="tm-list-item-name">Homework week 7<span class="tm-list-item-price"><a href="#">Go Live</a></span></h3>
+                    <h3 class="tm-list-item-name">Homework week 7<span class="tm-list-item-price"><a href="https://w7p2.onrender.com/Cart/">Go Live</a></span></h3>
                     <p class="tm-list-item-description">Exercise 7.3, 9.2</p>
                   </div>
                 </div> 
