--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="tm-list-item">          
                   <div class="tm-black-bg tm-list-item-text">
-                    <h3 class="tm-list-item-name">Homework week 5<span class="tm-list-item-price"><a href="#">Go Live</a></span></h3>
+                    <h3 class="tm-list-item-name">Homework week 5<span class="tm-list-item-price"><a href="https://w5.onrender.com/W5">Go Live</a></span></h3>
                     <p class="tm-list-item-description">Exercise 5.1, 5.2, 6.1, 6.2, 8.1</p>
                   </div>
                 </div>
