--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NNH - Portfolio</title>
+    <title>NNH - HomeWork</title>
     <link rel="stylesheet" href="fontawesome/css/all.min.css"> <!-- https://fontawesome.com/ -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" /> <!-- https://fonts.google.com/ -->
     <link rel="stylesheet" href="css/tooplate-wave-cafe.css">
@@ -18,7 +18,7 @@
         <div class="tm-left-inner">
           <div class="tm-site-header">
             <!-- <i class="fas fa-coffee fa-3x tm-site-logo"></i> -->
-            <h1 class="tm-site-name">Portfolio</h1>
+            <h1 class="tm-site-name">HomeWork</h1>
           </div>
           <nav class="tm-site-nav">
             <ul class="tm-site-nav-ul">
